fixed grammatical and spacing errors across pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2016,7 +2016,7 @@ body {
   color: #000000;
 }
 .cid-rzmSEyXFuo {
-  padding-top: 60px;
+  padding-top: 30px;
   padding-bottom: 30px;
   background-color: #ffffff;
 }
@@ -2034,7 +2034,7 @@ body {
   color: #000000;
 }
 .cid-rzmSu8Acjq {
-  padding-top: 60px;
+  padding-top: 30px;
   padding-bottom: 30px;
   background-color: #ffffff;
 }
@@ -2046,8 +2046,8 @@ body {
   color: #000000;
 }
 .cid-rzmSwmeP4V {
-  padding-top: 60px;
-  padding-bottom: 60px;
+  padding-top: 30px;
+  padding-bottom: 30px;
   background-color: #ffffff;
 }
 .cid-rzmSwmeP4V .media-container-row {
@@ -2072,7 +2072,7 @@ body {
   color: #000000;
 }
 .cid-rzmSz7e2sg {
-  padding-top: 75px;
+  padding-top: 90px;
   padding-bottom: 0px;
   background-color: #ffffff;
 }
@@ -2726,7 +2726,7 @@ body {
 }
 .cid-rzlZfCyMUB {
   padding-top: 90px;
-  padding-bottom: 90px;
+  padding-bottom: 60px;
   background-color: #ffffff;
 }
 .cid-rzlZfCyMUB .mbr-text,
@@ -4380,7 +4380,7 @@ body {
 }
 .cid-rzmcnrKM8Z {
   padding-top: 0px;
-  padding-bottom: 60px;
+  padding-bottom: 30px;
   background-color: #ffffff;
 }
 .cid-rzmd5m1fnS {
@@ -5088,7 +5088,7 @@ body {
   background-color: #ffffff;
 }
 .cid-rzmlcmbliF {
-  padding-top: 30px;
+  padding-top: 60px;
   padding-bottom: 0px;
   background-color: #ffffff;
 }
@@ -5153,7 +5153,7 @@ body {
   color: #000000;
 }
 .cid-rzmmWoXPEY {
-  padding-top: 30px;
+  padding-top: 60px;
   padding-bottom: 0px;
   background-color: #ffffff;
 }
@@ -5173,8 +5173,8 @@ body {
   color: #000000;
 }
 .cid-rzmoEAsTUR {
-  padding-top: 30px;
-  padding-bottom: 60px;
+  padding-top: 60px;
+  padding-bottom: 90px;
   position: relative;
   background-color: #ffffff;
 }
